--- a/paginas/cadastroProduto.html
+++ b/paginas/cadastroProduto.html
@@ -6,7 +6,7 @@
     <title>CRUD de Produtos</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="cadastroProduto.css">
+    <link rel="stylesheet" href="styles/cadastroProduto.css">
     <script src="/socket.io/socket.io.js"></script>
 </head>
 <body>
@@ -69,7 +69,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     
-    <script src="cadastroProduto.js"></SCript>
+    <script src="scripts/cadastroProduto.js"></SCript>
 
     <script>
         const socket = io();
