--- a/produto/produto-item.html
+++ b/produto/produto-item.html
@@ -4,12 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="style-venda.css">
     <link rel="stylesheet" href="style-produtos.css">
-    <title>Produtos</title>
+
+    <title>Document</title>
 </head>
 <body>
-    <h1 class="tipo-cafe">Café</h1>
-    <div id="carouselExample" class="carousel slide">
+    <div class="card mb-3 tamanho-produto-venda">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="Coffe.png" class="img-fluid rounded-start" alt="foto-produto">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title nome-produto">Café Reserva do Produtor - 1 kg - Grão</h5>
+              <p class="card-text">O Reserva do produtor traz ao paladar um sabor intenso e marcante com notas de rapadura, doce de leite, caramelo e mel. Possuí uma acidez cítrica média, corpo denso e cremoso e finalização doce prolongada.</p>
+              <p class="card-text"><small class="text-body-secondary">Direto da fazenda do Brasil</small></p>
+
+              <div class="quantidade-compra">
+                <div id="botao-adicionar">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-plus-square-fill" viewBox="0 0 16 16"><path d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm6.5 4.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3a.5.5 0 0 1 1 0"/></svg>
+                </div>
+                  <div class="quantidade">1</div>
+                <div id="botao-subtrair">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-dash-square-fill" viewBox="0 0 16 16">
+                      <path d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm2.5 7.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1 0-1"/>
+                    </svg>
+                </div>
+    
+                  <a href="#" class="btn btn-primary botao-comprar">Comprar</a>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner">
           <div class="carousel-item active">
             
@@ -158,6 +189,9 @@
         </button>
       </div>
 
+
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+      <script src="script-venda.js"></script>
 </body>
 </html>
