Login page changes

--- a/paginas/login.html
+++ b/paginas/login.html
@@ -9,54 +9,55 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Nerko+One&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/login.css">
     <link rel="icon" type="imagem/svg+xml" href="src/coffee-bean-filled-roast-brew-svgrepo-com.svg">
+    <link rel="stylesheet" href="styles/login.css">
+    <script src="scripts/login.js"></script>
     <title>Login</title>
 
 </head>
 <body>
     <div class="blur"></div>
-    <div class="card">
-        <div class ="login-side">
+    <div class="card" id="card">
+        <div class ="login-side" id="login-side">
             <h1>Login</h1>
             <form>
-                <div class="email">
+                <div class="email-login">
                     <label for="email" class="email-label">Email</label>
                     <input type="email" class="email-input" id="email" required>
                 </div>
-                <div class="senha">
+                <div class="senha-login">
                     <label for="senha" class="senha-label">Senha</label>
                     <div class="show-eye">
                         <input type="password" class="senha-input" id="senha" required>
                         <input type="checkbox"
                         id="mostrarSenha" onclick="mostrarSenha()">
-                        <label for="mostrarSenha">
+                        <label for="mostrarSenha" class="label-mostrar">
                             <span for="mostrarSenha"><img src="src/eye-svgrepo-com.svg"/></span>
                         </label>
                     </div>
                 </div>
                 <div class="btn-signup">
                     <button type="submit" class="btn btn-primary" id="botaoEntrar">Entrar</button>
-                    <a href="#cadastro">Não tenho uma conta</a>
+                    <a href="#cadastro" onclick="cadastro()">Não tenho uma conta</a>
                 </div>
             </form>
         </div>
-        <div class="cadastro-side">
+        <div class="cadastro-side" id="cadastro-side">
             <h1>Cadastro</h1>
             <form>
-                <div class="nome">
+                <div class="nome-cadsatro">
                     <label for="nome" class="nome-label">Nome</label>
                     <input type="text" class="nome-input" id="nome" required>
                 </div>
-                <div class="email">
+                <div class="email-cadsatro">
                     <label for="email" class="email-label">Email</label>
                     <input type="email" class="email-input" id="email" required>
                 </div>
-                <div class="senha">
+                <div class="senha-cadsatro">
                     <label for="senha" class="senha-label">Senha</label>
                     <input type="password" class="senha-input" id="senha" required>
                 </div>
-                <div class="confirmar-senha">
+                <div class="confirmar-senha-cadsatro">
                     <label for="confirmar-senha" class="confirmar-senha-label">Confirmar Senha</label>
                     <div class="input-show">
                         <input type="password" class="confirmar-senha-input" id="confirmar-senha" required>
@@ -66,7 +67,7 @@
                 <button type="submit" class="btn btn-primary" id="botaoCadastrar">Cadastrar</button>
             </form>
         </div>
-        <aside>
+        <aside id="image">
             <img src="src//kitescritorio_moidos.webp">
         </aside>
     </div>
