solve show/hide password issue

--- a/paginas/login.html
+++ b/paginas/login.html
@@ -26,7 +26,7 @@
                 <div class="senha-login">
                     <input type="password" class="senha-input" id="senha-login" placeholder="Senha" required>
                     <input type="checkbox"
-                    id="mostrarSenha" name="mostrarSenha">
+                    id="mostrarSenha" name="mostrarSenha" onclick="mostrarSenhaLogin()">
                     <label for="mostrarSenha" class="label-mostrar">
                         <span for="mostrarSenha"><img id="eye" src="src/eye-svgrepo-com.svg"/></span>
                     </label>
@@ -52,7 +52,7 @@
                 <div class="confirmar-senha-cadsatro">
                     <input type="password" class="confirmar-senha-input" id="confirmar-senha" placeholder="Confirmar Senha" required>
                     <div class="mostrar-senha">
-                        <input type="checkbox" id="checkbox" name="checkbox" onclick="mostrarSenha()">
+                        <input type="checkbox" id="checkbox" name="checkbox" onclick="mostrarSenhaSignup()">
                         <label for="checkbox">Mostrar Senha</label> 
                     </div>
                 </div>
