Add button back to menu

--- a/paginas/login.html
+++ b/paginas/login.html
@@ -18,7 +18,10 @@
     <div class="blur"></div>
     <div class="card" id="card">
         <div class ="login-side" id="login-side">
-            <h1>Login</h1>
+            <div class="top-side-login">
+                <a href="index.html"><img src="src/left-arrow-svgrepo-com.svg"></a>
+                <h1>Login</h1>
+            </div>
             <form>
                 <div class="email-login">
                     <input type="email" name="email" class="email-input" id="email-login" placeholder="Email" required>
@@ -39,7 +42,10 @@
             </form>
         </div>
         <div class="cadastro-side" id="cadastro-side">
-            <h1>Cadastro</h1>
+            <div class="top-side-cadastro">
+                <a href="index.html"><img src="src/left-arrow-svgrepo-com.svg"></a>
+                <h1>Cadastro</h1>
+            </div>
             <form>
                 <div class="nome-cadsatro">
                     <input type="text" class="nome-input" id="nome" placeholder="Nome" required>
@@ -59,7 +65,7 @@
                 </div>
                 <div class="btn-signup">
                     <button type="submit" class="btn btn-primary" id="botaoCadastrar">Cadastrar</button>
-                    <a href="#login" onclick="mostrarLogin_Cadastro()">Ja tenho uma conta</a>
+                    <a href="" onclick="mostrarLogin_Cadastro()">Ja tenho uma conta</a>
                 </div>
             </form>
         </div>
