--- a/paginas/login.html
+++ b/paginas/login.html
@@ -43,7 +43,7 @@
         </div>
         <div class="cadastro-side" id="cadastro-side">
             <div class="top-side-cadastro">
-                <a href="index.html"><img src="src/left-arrow-svgrepo-com.svg"></a>
+                <a href="index.html"><img src="src/left-arrow-svgrepo-com signup.svg"></a>
                 <h1>Cadastro</h1>
             </div>
             <form>
