Changes Signup Password input
Style="none" label preferences e eventos no JS

--- a/paginas/login.html
+++ b/paginas/login.html
@@ -54,12 +54,14 @@
                     <input type="email" class="email-input" id="email-cadastro" placeholder="Email" >
                 </div>
                 <div class="senha-cadsatro">
-                    <input type="password" class="senha-input" id="senha-cadastro" placeholder="Senha" >
+                    <input type="password" class="senha-input" id="senha-cadastro" placeholder="Senha"">
                     <div class="requisitos-senha">
-                        <label class="error-label">A senha deve conter:<br/>
-                            Mínimo 8 caracteres.<br/>
-                            1 caracter especial. <br/>
-                            1 letra maiúscula.
+                        <label class="error-label" id="requisitos" style="display: none;">
+                            <p>A senha deve conter:</p>
+                            <p>Mínimo 8 caracteres.</p>
+                            <p>1 caracter especial.</p> 
+                            <p>1 letra maiúscula.</p>
+                            </p>
                         </label>
                     </div>
                 </div>
