--- a/paginas/index.html
+++ b/paginas/index.html
@@ -6,6 +6,7 @@
     <title>Página Inicial</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="./styles/index.css">
 </head>
 <body>
 
@@ -25,7 +26,7 @@
                         <a class="nav-link" href="#">Sobre</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Cardápio</a>
+                        <a class="nav-link" href="cardapio.html">Cardápio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Contato</a>
@@ -42,7 +43,7 @@
     </nav>
 
     <!-- Cabeçalho -->
-    <header class="bg-primary text-white text-center py-5">
+    <header class="bg-primary  text-white text-center py-5" id="cabec">
         <div class="container">
             <h1>Bem-vindo à Minha Página</h1>
             <p class="lead">Esta é uma página inicial básica usando Bootstrap</p>
@@ -50,26 +51,26 @@
     </header>
 
     <!-- Conteúdo Principal -->
-    <main class="container my-5">
-        <div class="row">
-            <div class="col-md-4">
+    <main class="container my-5" id="main">
+        <div class="row" id="linhas-main">
+            <div class="col-md-4" id="divSecoes">
                 <h2>Seção 1</h2>
-                <p>Conteúdo para a primeira seção da página.</p>
+                <img src="./src/imagem 3 pagina principal.jpg" alt="cafe com leite">
             </div>
             <div class="col-md-4">
                 <h2>Seção 2</h2>
-                <p>Conteúdo para a segunda seção da página.</p>
+                <img src="./src/imagem 3 pagina principal.jpg" alt="cafe com leite">
             </div>
             <div class="col-md-4">
-                <h2>Seção 3</h2>
-                <p>Conteúdo para a terceira seção da página.</p>
+                <h2>café com leite</h2>
+                <img src="./src/imagem 3 pagina principal.jpg" alt="cafe com leite">
             </div>
         </div>
     </main>
 
     <!-- Rodapé -->
-    <footer class="bg-light text-center py-4">
-        <div class="container">
+    <footer class="bg-light text-center py-4" id="footer">
+        <div class="container" id="diFooter">
             <p class="text-muted">&copy; 2024 Minha Página. Todos os direitos reservados.</p>
         </div>
     </footer>
