--- a/paginas/index.html
+++ b/paginas/index.html
@@ -57,11 +57,11 @@
                 <h2>Seção 1</h2>
                 <img src="./src/imagem 3 pagina principal.jpg" alt="cafe com leite">
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4" id="divSecoes">
                 <h2>Seção 2</h2>
                 <img src="./src/imagem 3 pagina principal.jpg" alt="cafe com leite">
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4" id="divSecoes">
                 <h2>café com leite</h2>
                 <img src="./src/imagem 3 pagina principal.jpg" alt="cafe com leite">
             </div>
