--- a/paginas/cadastroProduto.html
+++ b/paginas/cadastroProduto.html
@@ -6,11 +6,10 @@
     <title>CRUD de Produtos</title>
     <link rel="stylesheet" href="styles/cadastroProduto.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    
 </head>
 <body>
 
-    <div class="container my-5" >
+    <div class="container my-5">
         <h1 class="text-center mb-4">Listagem de Produtos</h1>
 
         <div class="text-end mb-3">
@@ -23,11 +22,12 @@
                     <th>ID</th>
                     <th>Nome</th>
                     <th>Preço</th>
-                    <th>imagens</th>
+                    <th>Imagens</th>
                     <th>Ações</th>
                 </tr>
             </thead>
             <tbody id="productTable">
+                <!-- As linhas serão geradas dinamicamente pelo JavaScript -->
             </tbody>
         </table>
     </div>
@@ -51,9 +51,9 @@
                             <input type="number" step="0.01" class="form-control" id="productPrice" required>
                         </div>
                         <div class="mb-3">
-                            <label for="productImage" class="form-label"> da Imagem do Produto</label>
+                            <label for="productImage" class="form-label">URL da Imagem do Produto</label>
                             <input type="text" class="form-control" id="productImage" placeholder="Digite a URL da imagem do produto">
-                            <img id="imagePreview" class="img-fluid mt-2" src="" alt="Prévia da Imagem">
+                            <img id="imagePreview" class="img-fluid mt-2" src="" alt="Prévia da Imagem" style="display: none;">
                         </div>
                         <button type="submit" class="btn btn-primary">Salvar</button>
                     </form>
@@ -63,8 +63,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    
-    <script src="scripts/cadastroProduto.js"></SCript>
+    <script src="scripts/cadastroProduto.js"></script>
 
 </body>
 </html>
