--- a/paginas/cardapio.html
+++ b/paginas/cardapio.html
@@ -10,6 +10,10 @@
         .card-menu {
             margin-bottom: 20px;
         }
+        .card-img-top {
+            object-fit: cover;
+            height: 200px; /* Ajuste conforme necessário */
+        }
     </style>
 </head>
 <body>
