--- a/paginas/index.html
+++ b/paginas/index.html
@@ -20,7 +20,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Início</a>
+                        <a class="nav-link active" aria-current="page" href="cadastroProduto.html">cadastroProdutos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Sobre</a>
@@ -32,7 +32,7 @@
                         <a class="nav-link" href="#">Contato</a>
                     </li>
                     <li class="nav-item">
-                        <a class="btn btn-outline-primary me-2" href="cadastro.html">Cadastro</a>
+                        <a class="btn btn-outline-primary me-2" href="login.html">Cadastro</a>
                     </li>
                     <li class="nav-item">
                         <a class="btn btn-primary" href="login.html">Login</a>
