estiliza um pouquinho o cadastro produtos

--- a/paginas/cadastroProduto.html
+++ b/paginas/cadastroProduto.html
@@ -19,11 +19,11 @@
         <table class="table table-bordered" id="Tabela">
             <thead>
                 <tr>
-                    <th>ID</th>
+                    <th id="thId">ID</th>
                     <th>Nome</th>
                     <th>Preço</th>
                     <th>Imagens</th>
-                    <th>Ações</th>
+                    <th id="thAcoes">Ações</th>
                 </tr>
             </thead>
             <tbody id="productTable">
