--- a/paginas/produto.html
+++ b/paginas/produto.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="style-venda.css">
-    <link rel="stylesheet" href="style-produtos.css">
+    <link rel="stylesheet" href="./style/style-venda.css">
+    <link rel="stylesheet" href="./style/style-produtos.css">
 
-    <title>Document</title>
+    <title>Produtos</title>
 </head>
 <body>
     <div class="card mb-3 tamanho-produto-venda">
+
         <div class="row g-0">
           <div class="col-md-4">
             <img src="Coffe.png" class="img-fluid rounded-start" alt="foto-produto">
@@ -192,6 +193,6 @@
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
-      <script src="script-venda.js"></script>
+      <script src="./scripts/script-venda.js"></script>
 </body>
 </html>
