--- a/paginas/newproduct.html
+++ b/paginas/newproduct.html
@@ -8,6 +8,16 @@
     <title>Byte Coffee</title>
 </head>
 <body>
-    
+    <main>
+        <div class="upper-side">
+            <a href="index.html"><img src="src/left-arrow-svgrepo-com.svg"/></a>
+            <h1>Cadastro de Produtos</h1>
+        </div>
+        <div class="lower-side">
+            <table>
+                
+            </table>
+    </main>
 </body>
 </html>
+
